# nektar-driftwave

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  doc.ipynb  docker-compose.yml
.github/workflows/: ci.yml
example/: driftwave-parareal.xml  driftwave.xml
example/1d/: linear.geo  linear.xml  rr1d-implicit.xml  run_cmd_template.txt
example/1din3d/: cuboid.xml  rr1din3d-implicit.xml
example/explicit/: driftwave.xml
example/implicit/: driftwave.xml
example/parareal/: driftwave.xml
example/rr-1d/: equations.md  linear.geo  linear.xml  rr1d-implicit.xml
example/rr-1din3d/: cuboid.geo  run_cmd_template.txt
example/rr-2d/: rr2d-implicit.xml  rr2d.xml  run_cmd_template.txt  square-quads.xml
example/rr-2d_circle/: circle.geo  circle.xml  rr2d-implicit.xml  run_cmd_template.txt
example/rr-2din3d/: cuboid.geo  cuboid.xml  rr2din3d-implicit.xml  run_cmd_template.txt
scripts/: run_eg.sh
src/: DriftWaveSolver.cpp  DriftWaveSystem.cpp  DriftWaveSystem.h  ImplicitHelper.hpp  RogersRicci1D.cpp  RogersRicci1D.h  RogersRicci2D.cpp  RogersRicci2D.h
src/BoundaryConditions/: CustomBCs.cpp  CustomBCs.h  OutflowBCs.cpp  OutflowBCs.h
